그림판 이식 완료.